--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,23 @@
 [project]
 name = "srspipeline"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.0.0"
+description = "SRS (Software Requirements Specification) Generation Pipeline using Google Gemini AI with validation"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
-    "dotenv>=0.9.9",
-    "fastapi>=0.126.0",
-    "google-genai>=1.56.0",
-    "python-dotenv>=1.2.1",
-    "uvicorn>=0.38.0",
+    "fastapi>=0.115.0",
+    "google-genai>=1.0.0",
+    "python-dotenv>=1.0.0",
+    "uvicorn[standard]>=0.30.0",
+    "pydantic>=2.0.0",
 ]
+
+[project.scripts]
+srs-pipeline = "main:app"
+
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.0.0",
+    "httpx>=0.27.0",
+]
+
